@@ -1,6 +1,6 @@
 public void main(String[] args){
 	
-	
+	// use java --source 21 --enable-preview runWithoutClass.java in terminal
 	System.out.println("\nRunning without a class! ");
 
 }
